Add initial Dockerfile

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -3,9 +3,9 @@
   --font-regular: 400;
   --font-bold: 700;
   --font-black: 900;
-  --dark: #594f4f;
-  --light: #e5fcc2;
-  --brand-1: #547980;
-  --brand-2: #45ada8;
-  --brand-3: #9de0ad;
+  --dark: #363636;
+  --light: #a8a7a7;
+  --brand-1: #474747;
+  --brand-2: #99b898;
+  --brand-3: #feceab;
 }
