--- a/src/theme.scss
+++ b/src/theme.scss
@@ -3,9 +3,9 @@
   --font-regular: 400;
   --font-bold: 700;
   --font-black: 900;
-  --dark: #363636;
-  --light: #a8a7a7;
-  --brand-1: #474747;
-  --brand-2: #99b898;
-  --brand-3: #feceab;
+  --dark: #0F0A0A;
+  --light: #F5EFED;
+  --brand-1: #2292A4;
+  --brand-2: #BDBF09;
+  --brand-3: #D96C06;
 }
