More final stuff

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -3,9 +3,9 @@
   --font-regular: 400;
   --font-bold: 700;
   --font-black: 900;
-  --dark: #0F0A0A;
-  --light: #F5EFED;
-  --brand-1: #2292A4;
-  --brand-2: #BDBF09;
-  --brand-3: #D96C06;
+  --dark: #0f0a0a;
+  --light: #f5efed;
+  --brand-1: #2292a4;
+  --brand-2: #bdbf09;
+  --brand-3: #d96c06;
 }
